# spotify_etl_poc

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: a70d27ac8c8b_first.py
spoty_etl/: base_etl.py  cfg.py  models.py
